DG_A1_04:Travel Point:Fixed layout issues

--- a/src/styles/components/_decor.scss
+++ b/src/styles/components/_decor.scss
@@ -45,7 +45,7 @@
             border-radius: 50%;
             padding: abstracts.pxToRem(33px);
             left: 95.8%;
-            top: 30%;
+            top: 31%;
         }
         &__yellow-blur {
             border-radius: 50%;
